# gr-satnogs

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  MANIFEST.md  README.md
apps/: CMakeLists.txt
apps/flowgraphs/: afsk1200_ax25.grc  apt_demod.grc  ax25_transceiver_qt.grc  bpsk_demod.grc  cw_decoder.grc  cw_demod.grc  debug_afsk_transceiver_osmocom.py  device_args_handler.py  fm_demod.grc  fsk9600_ax25.grc  fsk9600_g3ruh_ax25.grc  generic_iq_receiver.grc  satnogs_afsk1200_ax25.py  satnogs_apt_demod.py  satnogs_bpsk_demod.py  satnogs_cw_decoder.py  satnogs_cw_demod.py  satnogs_fm_demod.py  satnogs_fsk9600_ax25.py  satnogs_fsk9600_g3ruh_ax25.py  satnogs_generic_iq_receiver.py  upsat_afsk_transmitter.grc  upsat_fsk_receiver.grc  upsat_fsk_transmitter.grc  upsat_transceiver_cli.grc  upsat_transceiver_cli.py  upsat_transceiver_qt.grc
apps/flowgraphs/satellites/: CMakeLists.txt  README.md  amsat_fox_duv_decoder.grc  meteor_decoder.grc  noaa_apt_decoder.grc  satnogs_amsat_fox_duv_decoder.py  satnogs_meteor_decoder.py  satnogs_noaa_apt_decoder.py  upsat_afsk_receiver.grc  upsat_fsk_transmitter.grc  upsat_transceiver_cli.grc  upsat_transceiver_cli.py  upsat_transceiver_qt.grc  upsat_transceiver_qt.py
apps/scripts/: CMakeLists.txt  satnogs_waterfall  satnogs_waterfall.gp
cmake/Modules/: FindFec.cmake  FindNova.cmake  FindOggVorbis.cmake  satnogsConfig.cmake
docs/: README.satnogs
docs/doxygen/: Doxyfile.in  Doxyfile.swig_doc.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: README.md  afsk1200_example.grc  ax25_example.grc  debug_fsk_transceiver_osmocom.grc  debug_fsk_transceiver_uhd.grc  morse_decoding_flowgraph.grc  morse_decoding_goliat.grc  test_matched_filter.grc  test_morse_decoder.grc  test_rigctl.grc
grc/: CMakeLists.txt  CMakeLists.txt.orig  satnogs_afsk_decoder.xml  satnogs_ax25_decoder_b.xml  satnogs_ax25_decoder_bm.xml  satnogs_ax25_encoder_bf.xml  satnogs_ax25_encoder_mb.xml  satnogs_block_tree.xml  satnogs_ccsds_rs_decoder_mm.xml  satnogs_clear_text_msg_sink.xml  satnogs_coarse_doppler_correction_cc.xml  satnogs_cw_encoder.xml  satnogs_cw_matched_filter_ff.xml  satnogs_cw_to_symbol.xml  satnogs_debug_msg_source.xml  satnogs_debug_msg_source_raw.xml  satnogs_decoder_8b10b.xml  satnogs_doppler_correction_cc.xml  satnogs_fox_telem_mm.xml  satnogs_frame_encoder.xml  satnogs_frame_file_sink.xml  satnogs_iq_sink.xml  satnogs_json_to_ecss_src.xml  satnogs_leo_channel.xml  satnogs_morse_debug_source.xml  satnogs_morse_decoder.xml  satnogs_multi_format_msg_sink.xml  satnogs_noaa_apt_sink.xml  satnogs_noaa_apt_sync.xml  satnogs_ogg_enc.xml  satnogs_ogg_encoder.xml  satnogs_ogg_source.xml  satnogs_power_spectral_density_cf.xml  satnogs_qb50_deframer.xml  satnogs_quad_demod_filter_ff.xml  satnogs_receiver.xml  satnogs_sine_matched_filter_ff.xml  satnogs_tcp_rigctl_msg_source.xml  satnogs_transmitter.xml  satnogs_udp_msg_sink.xml  (+8 more)
grc/satellites/: CMakeLists.txt
grc/satellites/upsat/: CMakeLists.txt  satnogs_qb50_deframer.xml  satnogs_upsat_fsk_frame_acquisition.xml  satnogs_upsat_fsk_frame_encoder.xml  satnogs_upsat_transmitter.xml
include/satnogs/: CMakeLists.txt  CMakeLists.txt.orig  afsk_decoder.h  api.h  ax25.h  ax25_decoder_b.h  ax25_decoder_bm.h  ax25_encoder_bf.h  ax25_encoder_mb.h  ccsds_rs_decoder_mm.h  clear_text_msg_sink.h  coarse_doppler_correction_cc.h  config.h  cw_encoder.h  cw_matched_filter_ff.h  cw_to_symbol.h  debug_msg_source.h  debug_msg_source_raw.h  decoder_8b10b.h  doppler_correction_cc.h  doppler_fit.h  fox_telem_mm.h  frame_encoder.h  frame_file_sink.h  freq_drift.h  iq_sink.h  json_to_ecss_src.h  leo_channel.h  log.h  morse.h  morse_debug_source.h  morse_decoder.h  morse_tree.h  multi_format_msg_sink.h  noaa_apt_sink.h  noaa_apt_sync.h  ogg_enc.h  ogg_encoder.h  ogg_source.h  power_spectral_density_cf.h  (+12 more)
lib/: CMakeLists.txt  CMakeLists.txt.orig  afsk_decoder_impl.cc  afsk_decoder_impl.h  ax25_decoder_b_impl.cc  ax25_decoder_b_impl.h  ax25_decoder_bm_impl.cc  ax25_decoder_bm_impl.h  ax25_encoder_bf_impl.cc  ax25_encoder_bf_impl.h  ax25_encoder_mb_impl.cc  ax25_encoder_mb_impl.h  ccsds_rs_decoder_mm_impl.cc  ccsds_rs_decoder_mm_impl.h  clear_text_msg_sink_impl.cc  clear_text_msg_sink_impl.h  coarse_doppler_correction_cc_impl.cc  coarse_doppler_correction_cc_impl.h  cw_encoder_impl.cc  cw_encoder_impl.h  cw_matched_filter_ff_impl.cc  cw_matched_filter_ff_impl.h  cw_to_symbol_impl.cc  cw_to_symbol_impl.h  debug_msg_source_impl.cc  debug_msg_source_impl.h  debug_msg_source_raw_impl.cc  debug_msg_source_raw_impl.h  decoder_8b10b_impl.cc  decoder_8b10b_impl.h  doppler_correction_cc_impl.cc  doppler_correction_cc_impl.h  doppler_fit.cc  fox_telem_mm_impl.cc  fox_telem_mm_impl.h  frame_encoder_impl.cc  frame_encoder_impl.h  frame_file_sink_impl.cc  frame_file_sink_impl.h  freq_drift.cc  (+49 more)
libfec/: CMakeLists.txt
python/: CMakeLists.txt  __init__.py  dsp_settings.py  hw_settings.py  satnogs_info.py.in  satnogs_receiver.py  satnogs_transmitter.py  satnogs_upsat_receiver.py  satnogs_upsat_transmitter.py  utils.py  waterfall_plotter.py
swig/: CMakeLists.txt  satnogs_debug_swig.i  satnogs_swig.i  satnogs_swig.i.orig  satnogs_swig.py.in  satnogs_swig0.i
